fix(styling): Dark Mode add bg-color to input checkbox Composite Modal

--- a/packages/common/src/styles/slick-editors.scss
+++ b/packages/common/src/styles/slick-editors.scss
@@ -431,6 +431,7 @@
         border: var(--slick-editor-modal-select-editor-border, v.$slick-editor-modal-select-editor-border);
       }
       .checkbox-editor-container {
+        background-color: var(--slick-text-editor-background, v.$slick-text-editor-background);
         padding: var(--slick-editor-modal-checkbox-editor-padding, v.$slick-editor-modal-checkbox-editor-padding);
         border: var(--slick-editor-modal-checkbox-editor-border, v.$slick-editor-modal-checkbox-editor-border);
         border-radius: var(--slick-editor-modal-checkbox-editor-border-radius, v.$slick-editor-modal-checkbox-editor-border-radius);
